--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-        button{
+        button {
             background: cyan;
             width: 500px;
             height: 80px;
@@ -16,19 +16,23 @@
 
 
 </head>
+
 <body style="margin: 0">
 <div style="position: absolute;display: flex;left: 80px;top: 10px;color: white"><h1>Score: &nbsp</h1>
     <h1 id="score">0</h1></div>
-    <div id="startTable" style="position: absolute;display: flex;left: 30%;top: 30%;color: black;background: white;height: 250px;width: 500px">
-        <div style="left: 30%;top: 30%;">
-            <h1 style="text-align: center" id="score2">0</h1>
-            <p style="text-align: center">Point</p>
-            <div><button id="startBtn">Start Game</button></div>
-
+<div id="startTable"
+     style="position: absolute;display: flex;left: 30%;top: 30%;color: black;background: white;height: 250px;width: 500px">
+    <div style="left: 30%;top: 30%;">
+        <h1 style="text-align: center" id="score2">0</h1>
+        <p style="text-align: center">Point</p>
+        <div>
+            <button id="startBtn">Start Game</button>
         </div>
-    </div>
 
+    </div>
+</div>
 <canvas id="canvas"></canvas>
+
 </body>
 
 
