--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 </head>
 
 <body style="margin: 0">
+<audio id="audio" src="nhac.mp3" loop ></audio>
+<audio id="ban" src="ban.mp3" ></audio>
+<audio id="no" src="no.mp3" ></audio>
 <div style="position: absolute;display: flex;left: 80px;top: 10px;color: white"><h1>Score: &nbsp</h1>
     <h1 id="score">0</h1></div>
 <div id="startTable"
